# src/service/api/api-structures.go
@@ -3,3 +3,7 @@ package api
 type UpdateResponse struct {
 	UpdateStatus string `json:"status"`
 }
+
+type TicketValidationResponse struct {
+	TrainID string `json:"train_id"`
+}
